# rots-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  calculateOverlaps2.py  pyproject.toml  requirements.txt  rots.py
data/: blood_res.txt  rots_res_df.csv
src/: __main__.py  calculateOverlaps1.py  calculateOverlaps2.py  helpers.py  rots.py
src/optim_cy/: optim.cpp  optim.pyx  pvalue.c  pvalue.pyx  setup.py
src/rots_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rotspy/: __init__.py  __main__.py  calculateOverlaps2.py  helpers.py  plot_rots.py  rots.py
